test/errors/stmt_del.py
del 4
del ~x
del *x
del x, 7
del 7, x
